Input Form added

--- a/Todo-App/src/components/UI/Button.css
+++ b/Todo-App/src/components/UI/Button.css
@@ -1,7 +1,18 @@
-button {
+.button {
   background-color: #4c6ef5;
-  width: 5rem;
+  width: 10rem;
+  border: 0;
   border-radius: 10px;
   padding: 0.7rem 1.5rem;
   color: #fff;
+  cursor: pointer;
+}
+
+.button:active {
+  outline: none;
+}
+
+.button:active,
+.button:hover {
+  background-color: #748ffc;
 }
