User Item added

--- a/User-Info/src/App.css
+++ b/User-Info/src/App.css
@@ -2,5 +2,12 @@
   background-color: #e3fafc;
   width: 100vw;
   height: 100vh;
-  position: relative;
+  display: flex;
+  flex-direction: column;
+}
+
+.input {
+}
+
+.output {
 }
