User Input and Info UI done

--- a/User-Info/src/App.css
+++ b/User-Info/src/App.css
@@ -1,13 +1,9 @@
 .main {
-  background-color: #e3fafc;
-  width: 100vw;
-  height: 100vh;
   display: flex;
   flex-direction: column;
-}
-
-.input {
-}
-
-.output {
+  gap: 2rem;
+  height: 100%;
+  width: 100%;
+  margin-left: 10vw;
+  margin-top: 5vh;
 }
