--- a/Forms-User-Inputs/src/index.css
+++ b/Forms-User-Inputs/src/index.css
@@ -80,8 +80,8 @@ button:active {
 }
 
 button:disabled,
-button:active,
-button:hover {
+button:disabled:hover,
+button:disabled:active {
   background-color: #ccc;
   border-color: #ccc;
   cursor: not-allowed;
