--- a/Food-Project-HTTP-Form/src/components/Meals/AvailableMeals.module.css
+++ b/Food-Project-HTTP-Form/src/components/Meals/AvailableMeals.module.css
@@ -11,6 +11,18 @@
   padding: 0;
 }
 
+.loading {
+  font-size: 36px;
+  color: white;
+  text-align: center;
+}
+
+.error {
+  font-size: 36px;
+  color: red;
+  text-align: center;
+}
+
 @keyframes meals-appear {
   from {
     opacity: 0;
